--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "eslint": "^6.6.0",
     "express": "^4.16.4",
-    "sqlite3": "^4.0.6"
+    "nyc": "^14.1.1",
+    "pre-push": "^0.1.1",
+    "sqlite3": "^4.0.6",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
